--- a/gallery_api/requirements.txt
+++ b/gallery_api/requirements.txt
@@ -1,3 +1,6 @@
 django==3.2.5
 djangorestframework==3.12.4
 django-cors-headers==3.7.0
+python-dotenv==0.17.1
+boto3==1.17.83
+django-storages==1.11.1
