--- a/gallery_client/package.json
+++ b/gallery_client/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "uikit": "^3.7.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
